@@ -71,3 +71,4 @@ struct _VinagreWindowPrivate
 G_END_DECLS
 
 #endif  /* __VINAGRE_WINDOW_PRIVATE_H__  */
+/* vim: ts=8 */
