@@ -1,3 +1,12 @@
+2007-10-21  Jonh Wendell <jwendell@gnome.org>
+
+	* src/vinagre-tab.c,
+	* src/vinagre-window.c,
+	* src/vinagre-window.h,
+	* src/vinagre-notebook.c,
+	* src/vinagre-window-private.h:
+	  - Disable all shortcut keys when the cursor is grabbed, closes #485317.
+
 2007-10-11  Jonh Wendell <jwendell@gnome.org>
 
 	* data/Makefile.am
